<resources>
    <string name="app_name">BloodBank</string>
    <string name="skip">skip</string>
    <string name="start">Get Started</string>
    /*Sign in*/
    <string name="welcome_txt">Welcome , Start \n controlling donations</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email address </string>

    <string name="backIcon">back_icon</string>
    <string name="forgot_password">Forgot Password</string>
    /*forget password*/
    <string name="recoverPassText">Enter your email and we’ll send you \n instructions on how to reset your password.</string>
    <string name="forgotPassword">Forget password</string>
    <string name="recover_password">Recover password</string>

    <string name="add_request">Add Request</string>
    <string name="record">record</string>
    <string name="select_type_of_donation">select type of donation</string>
    <string name="type">Type</string>
    <string name="blood_type_needed">Blood Type Needed</string>
    <string name="enter_number_of_units">Enter Number Of Units</string>
    <string name="for_emergency">For Emergency</string>
    <string name="submit">Submit</string>
    <string name="add_campaign">Add campaign</string>
    <string name="name">Name</string>
    <string name="location">location</string>
    <string name="select_a_name_for_campaign">select a name for campaign</string>
    <string name="select_a_location_for_campaign">select a location for campaign</string>
    <string name="_00_00">00:00</string>
    <string name="start_time">Start Time</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="end_time">End Time</string>
    <string name="reservation">RESERVATION</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="profileimg">profileImg</string>
    <string name="no_result_was_found">No Result Was Found</string>
    <string name="search">search</string>
    <string name="blood_bank_requests">Blood Bank Requests</string>
    <string name="edit">edit</string>
    <string name="req_background">req_background</string>
    <string name="urgent">URGENT</string>
    <string name="a">A+</string>
    <string name="dealing_with_users_reservation">Dealing With Users Reservation</string>
    <string name="you_need_to_deal_with_users_reservation_for_donation_by_decline_or_accept_according_to_user_show_off">You need to deal with users reservation for donation by decline or accept according to user show off</string>
    <string name="announce_for_new_campaigns">Announce For New Campaigns</string>
    <string name="announcing_for_new_campaigns_ecome_more_easier_just_add_all_information_about_campaign_and_all_users_nearby_campaigns_will_be_noticed">
       Announcement for new campaigns become easier just add all information about the campaign and all users nearby campaigns will be noticed</string>
    <string name="announce_blood_needs_request">Announce blood needs request</string>
    <string name="it_becomes_easier_now_to_reach_to_all_users_who_can_donate_blood">It becomes easier now to reach to all users who can donate blood</string>
    <string name="red_wings">Red Wings</string>
    <string name="red_wings_logo">red wings logo</string>

</resources>