<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/colorLight"
    tools:context=".requestActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:text="@string/add_request"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/viewReq"
                    style="@style/BackIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:contentDescription="@string/record"
                    android:src="@drawable/record" />

            </LinearLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/numUnits"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/enter_number_of_units"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    app:boxBackgroundColor="@color/colorLight"
                    app:errorEnabled="true"
                    app:hintAnimationEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bloodType"
                    app:startIconContentDescription="id card icon"
                    app:startIconDrawable="@drawable/req_num_units"
                    app:startIconTint="@color/colorMediumLight">

                    <EditText
                        android:id="@+id/NoOfUnits"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/select_type_of_donation"
                        android:inputType="text"
                        android:textColorHint="@color/colorPrimaryDark"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/bloodType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/blood_type_needed"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    app:boxBackgroundColor="@color/colorLight"
                    app:errorEnabled="true"
                    app:hintAnimationEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/typeOfDonation"
                    app:startIconContentDescription="id card icon"
                    app:startIconDrawable="@drawable/req_blood_type"
                    app:startIconTint="@color/colorMediumLight">

                    <EditText
                        android:id="@+id/UnitsType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/select_type_of_donation"
                        android:inputType="text"
                        android:textColorHint="@color/colorPrimaryDark"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="4dp"
                    android:text="@string/for_emergency"
                    app:layout_constraintBottom_toTopOf="@+id/submit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/numUnits"
                    app:layout_constraintVertical_bias="0.0"
                    app:switchPadding="8dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/typeOfDonation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/type"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    app:boxBackgroundColor="@color/colorLight"
                    app:errorEnabled="true"
                    app:hintAnimationEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:startIconContentDescription="id card icon"
                    app:startIconDrawable="@drawable/req_don_type"
                    app:startIconTint="@color/colorMediumLight">

                    <EditText
                        android:id="@+id/donType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/select_type_of_donation"
                        android:inputType="text"
                        android:textColorHint="@color/colorPrimaryDark"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/Update"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    android:backgroundTint="@color/colorAccent"
                    android:text="Update"
                    android:textColor="@color/colorWhite"
                    app:cornerRadius="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/numUnits" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>